--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "c:\\Users\\Rijan Lamichhane\\Downloads\\mysql-connector-j-8.0.33 (1)\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
+        "src/SudokuSolver/Login/mysql-connector-j-8.0.33.jar"
     ]
 }
