--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "lib/**/*.jar",
         "c:\\Users\\Rijan Lamichhane\\Downloads\\mysql-connector-j-8.0.33 (1)\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar",
         "src/SudokuSolver/Login/mysql-connector-j-8.0.33.jar"
-    ]
+    ],
+    "docwriter.progress.trackMethods": false
 }
